--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ db.sqlite3
 db.sqlite3-journal
 /media
 /staticfiles
+staticfiles/
+
+HEROKU_DEPLOYMENT.md
+DEPLOYMENT.md
 
 # Virtual Environment
 .venv/
