--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 dj-database-url==3.0.1
 Django==5.2.7
+django-csp==4.0
 django-otp==1.6.3
 django-ranged-response==0.2.0
 django-simple-captcha==0.6.3
